--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,8 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Albumkrtek",
     "version": "1.0",
     "description": "SFGame scrapbook helper",
-    "permissions": [
-        "webRequest",
-        "webRequestBlocking",
-        "tabs",
-        "<all_urls>"
-    ],
     "content_scripts": [
         {
             "matches": [
@@ -39,17 +33,15 @@
                 "*://*.sfgame.tr/",
                 "*://*.sfgame.us/"
             ],
-            "js": [
-                "pageload.js"
-            ]
+            "js": [ "pageload.js" ]
         }
     ],
-    "background": {
-        "scripts": [
-            "background.js",
+    "web_accessible_resources": [{
+        "resources": [
+            "script.js",
             "playeritems.js",
             "scrapbook.js"
         ],
-        "persistent": true
-    }
+        "matches": [ "<all_urls>" ]
+      }]
 }
