--- a/manifest.json
+++ b/manifest.json
@@ -1,47 +1,60 @@
 {
-    "manifest_version": 3,
-    "name": "Albumkrtek",
-    "version": "1.0",
-    "description": "SFGame scrapbook helper",
-    "content_scripts": [
-        {
-            "matches": [
-                "*://*.sfgame.cz/",
-                "*://*.sfgame.net/",
-                "*://*.sfgame.de/",
-                "*://*.sfgame.pl/",
-                "*://*.sfgame.hu/",
-                "*://*.sfgame.ae/",
-                "*://*.sfgame.br/",
-                "*://*.sfgame.ca/",
-                "*://*.sfgame.cl/",
-                "*://*.sfgame.dk/",
-                "*://*.sfgame.es/",
-                "*://*.sfgame.fr/",
-                "*://*.sfgame.co.uk/",
-                "*://*.sfgame.gr/",
-                "*://*.sfgame.in/",
-                "*://*.sfgame.it/",
-                "*://*.sfgame.jp/",
-                "*://*.sfgame.mx/",
-                "*://*.sfgame.nl/",
-                "*://*.sfgame.pt/",
-                "*://*.sfgame.ro/",
-                "*://*.sfgame.ru/",
-                "*://*.sfgame.se/",
-                "*://*.sfgame.sk/",
-                "*://*.sfgame.tr/",
-                "*://*.sfgame.us/"
-            ],
-            "js": [ "pageload.js" ]
-        }
-    ],
-    "web_accessible_resources": [{
-        "resources": [
-            "script.js",
-            "playeritems.js",
-            "scrapbook.js"
-        ],
-        "matches": [ "<all_urls>" ]
-      }]
+  "manifest_version": 3,
+  "name": "Shakes & Fidget scrapbook helper",
+  "version": "1.1",
+  "description": "SFGame scrapbook helper",
+  "permissions": [
+    "scripting",
+    "tabs",
+    "activeTab"
+  ],
+  "host_permissions": [
+    "*://*/*"
+  ],
+  "content_scripts": [
+    {
+      "matches": [
+        "*://*.sfgame.cz/*",
+        "*://*.sfgame.net/*",
+        "*://*.sfgame.de/*",
+        "*://*.sfgame.pl/*",
+        "*://*.sfgame.hu/*",
+        "*://*.sfgame.ae/*",
+        "*://*.sfgame.br/*",
+        "*://*.sfgame.ca/*",
+        "*://*.sfgame.cl/*",
+        "*://*.sfgame.dk/*",
+        "*://*.sfgame.es/*",
+        "*://*.sfgame.fr/*",
+        "*://*.sfgame.co.uk/*",
+        "*://*.sfgame.gr/*",
+        "*://*.sfgame.in/*",
+        "*://*.sfgame.it/*",
+        "*://*.sfgame.jp/*",
+        "*://*.sfgame.mx/*",
+        "*://*.sfgame.nl/*",
+        "*://*.sfgame.pt/*",
+        "*://*.sfgame.ro/*",
+        "*://*.sfgame.ru/*",
+        "*://*.sfgame.se/*",
+        "*://*.sfgame.sk/*",
+        "*://*.sfgame.tr/*",
+        "*://*.sfgame.us/*"
+      ],
+      "js": [
+        "scripts/index.js"
+      ],
+      "run_at": "document_idle"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "scripts/*"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
+  ]
 }
